fix: adjustment on small device

--- a/src/styles/Activity/Activity.css
+++ b/src/styles/Activity/Activity.css
@@ -38,7 +38,7 @@
         margin-left: 4px;
     }
 } 
-@media screen and (max-width:450px) {
+@media screen and (max-width:460px) {
     .activity_container
     {
         width: 80%;
