--- a/src/styles/Calendar/Calendar.css
+++ b/src/styles/Calendar/Calendar.css
@@ -126,11 +126,12 @@
     {
         display: flex;
         flex-direction: column;
-        height: 87vh;
-        width: 120%;
+        height: 102vh;
+        width: 100%;
         margin-left: 130px;
         background-color: rgba(249, 249, 250, 0.879);
-        margin-top: 20px;
+        /* background-color: red; */
+        margin-top: 90px;
         border-radius: 10px;
     }
 } 
@@ -139,11 +140,12 @@
     {
         display: flex;
         flex-direction: column;
-        height: 87vh;
+        height: 102vh;
         width: 90%;
         margin-left: 100px;
         background-color: rgba(249, 249, 250, 0.879);
-        margin-top: 20px;
+        /* background-color: red; */
+        margin-top: 100px;
         border-radius: 10px;
     }
 } 
@@ -152,24 +154,25 @@
     {
         display: flex;
         flex-direction: column;
-        height: 87vh;
+        height: 110vh;
         width: 100%;
         margin-left: 60px;
         background-color: rgba(249, 249, 250, 0.879);
-        margin-top: 20px;
+        /* background-color: red; */
+        margin-top: 120px;
         border-radius: 10px;
     }
 } 
-@media screen and (max-width:450px) {
+@media screen and (max-width:460px) {
     .calendar_container
     {
         display: flex;
         flex-direction: column;
-        height: 87vh;
+        height: 101vh;
         width: 100%;
         margin-left: 45px;
         background-color: rgba(249, 249, 250, 0.879);
-        margin-top: 20px;
+        margin-top: 90px;
         border-radius: 10px;
     }
 } 
