--- a/src/styles/Dashboard/Dashboard.css
+++ b/src/styles/Dashboard/Dashboard.css
@@ -68,7 +68,7 @@
         margin-top: -20px;
     }
 }
-@media screen and (max-width:450px) {
+@media screen and (max-width:460px) {
     .dashboard_container
     {
         display: flex;
